@@ -1,5 +1,4 @@
 Tab
-Apps-Menu
 Infinite-Desktop
 (new) window matchers
 (new) viewport stuff
