@@ -195,6 +195,8 @@ A way to bind a command to button > 5 in Sawfish is described in our Wiki. [Timo
 
 @item Custom make-url-widget replaced by GtkLinkButton [Christopher Bratusek]
 
+@item Custom about-dialog replaced by GtkAboutDialog [Christopher Bratusek]
+
 @item GtkButton + GtkPreview + GtkColorSelection trio replaced by single GtkColorButton [Christopher Bratusek]
 @end itemize
 @item Other Changes:
