@@ -1,10 +1,5 @@
 #!/bin/sh
-
-REP_LOAD_PATH="__lispdir__"
-export REP_LOAD_PATH
-
-exec rep "$0" "$@"
-
+exec rep --batch "$0" "$@"
 !#
 
 ;; sawfish-about.jl.in -- helper process for sawfish about dialog
@@ -27,43 +22,44 @@ exec rep "$0" "$@"
 ;; along with sawfish; see the file COPYING.  If not, write to
 ;; the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
 
-(structure
+(structure ()
 
-    (export )
+  (open rep
+    gui.gtk-2.gtk
+    rep.system
+    rep.io.files)
 
-    (open rep
-	  gui.gtk-2.gtk
-	  rep.system
-	  rep.io.files
-	  rep.i18n.gettext
-	  sawfish.gtk.stock)
+  (define dialog (gtk-about-dialog-new))
+  (gtk-about-dialog-set-program-name dialog "Sawfish")
+  (gtk-about-dialog-set-version dialog "__version__")
+  (gtk-about-dialog-set-copyright dialog "(c) 1999-2000 John Harper\n
+  (c) 2000 Eazel, Inc\n
+  (c) 2007-2008 Janek Kozicki\n
+  (c) 2008-2009 Christopher Bratusek")
+  (gtk-about-dialog-set-license dialog "Sawfish is released under the terms of the\n
+  GNU General Public License version 2, or (at your option) any later version.\n
+  See the `COPYING' file in the source tree for the full license\n\n
+  The sound-files are distributed under the Artistic License version 2.0.\n
+  See the `COPYING.SOUNDS' file in the source-tree.")
+  (gtk-about-dialog-set-comments dialog "Sawfish manages your windows extensibly")
+  (gtk-about-dialog-set-website dialog "http://sawfish.wikia.com")
+  (gtk-about-dialog-set-website-label dialog "Sawfish Wiki")
+  (gtk-about-dialog-set-authors dialog '("1999-2007: John Harper\n
+  2007-2009: Janek Kozicki, Timo Korvola, Andrea Vetorello, Guillermo S. Romero\n
+  2008-2009: Christopher Bratusek, Teika 'Mister X' Kazura, Jeremy Hankins\n
+  1999-2009: All the brave contributors (see `THANKS' in `CONTRIBUTING')"))
+  (gtk-about-dialog-set-logo dialog (gdk-pixbuf-new-from-file "__sawfishdir__/sawfish.png"))
+  (g-signal-connect dialog "delete_event" (lambda () (throw 'quit 0)))
+  (gtk-widget-show-all dialog)
+  
+  (g-signal-connect dialog "response"
+    (lambda () (throw 'out)))
 
-  (unless (get-command-line-option "--disable-nls")
-    (bindtextdomain "sawfish" "__localedir__")
-    (textdomain "sawfish"))
-
-  (define title "Sawfish")
-  (define version "__version__")
-  (define copyright "(C) 1999-2000 John Harper; (C) 2000 Eazel, Inc")
-  (define authors `("John Harper <jsh@unfactored.org>"
-		    ,(_ "and many others...")))
-  (define comments (_ "Sawfish manages your windows extensibly."))
-  (define logo "sawfish-logo.png")
-
-  (let* ((hbox (gtk-hbox-new t 0))
-	 (ref (gtk-link-button-new-with-label "http://sawfish.wikia.com/"
-                                              (_ "Sawfish homepage"))))
-    (gtk-box-pack-start hbox ref)
-    (gtk-widget-show-all hbox)
-    (let ((widget (about-dialog title version copyright
-				authors comments
-				#:logo logo
-				#:extra hbox)))
-      (g-signal-connect widget "destroy"
-			(lambda () (throw 'out)))
-      (catch 'out
-	(setq interrupt-mode 'exit)
-	(recursive-edit)))))
+  (catch 'out
+    (setq interrupt-mode 'exit)
+    (recursive-edit))
+  
+  )
 
 ;; Local variables:
 ;; major-mode: lisp-mode
