@@ -1,3 +1,9 @@
+2009-10-24  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/ext/apps-menu.jl: added a missing bracket
+
+	* scripts/Makefile.in
+	* scripts/sawfish-about.jl.in: switched from custom about-dialog to GtkAboutDialog
+
 2009-10-24  Teika kazura <teika@lavabit.com>
 	* lisp/sawfish/wm/user.jl
 	* man/news.texi: minor news & comment fix.
